fixed mobile view and adjusted tweet visibility

--- a/f1-news-app/src/components/component.css
+++ b/f1-news-app/src/components/component.css
@@ -168,6 +168,8 @@
    
 }
 
+
+
 .link:hover{
     color: #e10600;
     cursor: pointer;
@@ -175,11 +177,15 @@
 
 @media screen and (max-width: 1000px) {
     
+
+    .tweet-container{
+        display: none;
+    }
     .navbar{
         position: sticky;
         display: flex;
         flex-direction: column;
-        width: 76%;
+        width: 100%;
         height: 5%;
         z-index: 100;
         padding-top: 0;
@@ -238,6 +244,10 @@
 
     .summary-text, .title-text, .date-text, .link{
         left: 5%;
+    }
+
+    .summary-text{
+        width: 85%;
     }
    
     
